# modern-trojan

./: .gitignore  CMakeLists.txt  README.md
docker/: dynamic.Dockerfile  static.Dockerfile
include/: buf.h  conf.h  ec.h  hash.h  proto.h  service.h  unix_sys.h
src/: conf.cpp  hash.cpp  main.cpp  proto.cpp  service.cpp
